feat(ui): implement qr code generation
